--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -1,7 +1,7 @@
 version: 1
 datastore:
   user: root
-  password: P@ssw0rd
+  password: 
   hostname: mysql-food-delivery-app-lab6.eastus2.cloudapp.azure.com
   port: '3306'
   db: events
