--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -31,9 +31,9 @@ services:
 # So you don't have to use root, but you can if you like
    MYSQL_USER: 'root'
 # You can use whatever password you like
-   MYSQL_PASSWORD: 'P@ssw0rd'
+   MYSQL_PASSWORD: 
 # Password for root access
-   MYSQL_ROOT_PASSWORD: 'P@ssw0rd'
+   MYSQL_ROOT_PASSWORD: 
   ports:
 # <Port exposed> : < MySQL Port running inside container>
    - '3306:3306'
