--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -43,6 +43,37 @@ services:
 # Where our data will be persisted
   volumes:
    - my-db:/var/lib/mysql
-# Names our volume
+   
+ receiver:
+  image: receiver
+  ports:
+   - "8080:8080"
+  depends_on:
+   - "kafka"
+  hostname: receiver
+
+ storage:
+  image: storage
+  ports:
+   - "8090:8090"
+  depends_on:
+   - "kafka"
+  hostname: storage
+
+ processing:
+  image: processing
+  network_mode: "host"
+  depends_on:
+   - "storage"
+  hostname: processing
+
+ audit_log:
+  image: audit_log
+  ports:
+   - "8110:8110"
+  depends_on:
+   - "kafka"
+  hostname: audit_log
+  
 volumes:
  my-db:
