--- a/processing/app_conf.yml
+++ b/processing/app_conf.yml
@@ -4,4 +4,4 @@ datastore:
 scheduler:
  period_sec: 5
 eventstore:
- url: http://localhost:8090/orders
+ url: http://mysql-food-delivery-app-lab6.eastus2.cloudapp.azure.com:8090/orders
