--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -71,5 +71,13 @@ services:
   depends_on:
    - "kafka"
   
+ dashboard:
+  image: dashboard
+  ports:
+   - "3000:3000"
+  depends_on:
+   - "processing"
+   - "audit_log"
+   
 volumes:
  my-db:
