--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -44,10 +44,14 @@ services:
   volumes:
    - my-db:/var/lib/mysql
    
- receiver:
+  receiver:
   image: receiver
   ports:
    - "8080:8080"
+  environment:
+    - TARGET_ENV=test
+  volumes:
+    - /home/azureuser/config/receiver:/config
   depends_on:
    - "kafka"
 
@@ -55,12 +59,20 @@ services:
   image: storage
   ports:
    - "8090:8090"
+  environment:
+    - TARGET_ENV=test
+  volumes:
+    - /home/azureuser/config/storage:/config
   depends_on:
    - "kafka"
 
  processing:
   image: processing
   network_mode: "host"
+  environment:
+    - TARGET_ENV=test
+  volumes:
+    - /home/azureuser/config/processing:/config
   depends_on:
    - "storage"
 
@@ -68,6 +80,10 @@ services:
   image: audit_log
   ports:
    - "8110:8110"
+  environment:
+    - TARGET_ENV=test
+  volumes:
+    - /home/azureuser/config/audit_log:/config
   depends_on:
    - "kafka"
   
